--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@visx/annotation": "^3.0.0",
     "@visx/axis": "^3.0.0",
     "@visx/gradient": "^3.0.0",
     "@visx/grid": "^3.0.0",
@@ -21,7 +22,8 @@
     "@visx/responsive": "^3.0.0",
     "@visx/scale": "^3.0.0",
     "@visx/shape": "^3.0.0",
-    "@visx/tooltip": "^3.0.0"
+    "@visx/tooltip": "^3.0.0",
+    "@visx/xychart": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
